# Horus-Project

./: .clang-format  .editorconfig  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  attitudeindicator.h  build.bat  build.sh  main.cpp  resources.qrc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  link-check-config.json  release.yml
docs/: ARCHITECTURE.md  ESP32_SETUP.md  MPU6050_CALIBRATION.md  SERIAL_PROTOCOL.md
firmware/: mpu6050_imu.ino
